fix: SetupForm-overflow수정

--- a/GLITCH_HUB/src/index.scss
+++ b/GLITCH_HUB/src/index.scss
@@ -35,9 +35,9 @@ body {
   margin: 0;
   width: 100%;
   background-color: var(--background-color);
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
 }
 
 body * {
