--- a/GLITCH_HUB/src/pages/glitchRace/components/CountDown.module.scss
+++ b/GLITCH_HUB/src/pages/glitchRace/components/CountDown.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.4);
+  border-radius: 20px;
   backdrop-filter: blur(4px);
   z-index: 100;
 }
