--- a/GLITCH_HUB/src/shared/styles/variables.scss
+++ b/GLITCH_HUB/src/shared/styles/variables.scss
@@ -25,7 +25,7 @@
 
   --canvas-bg: rgba(255, 255, 255, 0.4);
   --canvas-border: rgba(0, 0, 0, 0.1);
-  --track-color: rgba(0, 0, 0, 0.05);
+  --track-color: rgba(0, 0, 0, 0.17);
   --neon-primary: #00b894;
 
   --neon-font-color: #ffffff;
